[tool.poetry]
name = "hitman"
version = "2.1.0"
description = "The professional RSS enclosure (Podcast) downloader."
repository = "https://github.com/jrabbit/hitman"
documentation = "https://hitman.readthedocs.io/en/latest/"
authors = ["Jack Laxson <jackjrabbit+hitman@gmail.com>"]
license = "GPL-3.0+"
classifiers = [
    'Topic :: Multimedia',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP',
    'Operating System :: BeOS',
    'Environment :: Console',
]

[tool.poetry.scripts]
hitman = "hitman:cli_base"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
click = "^7.0"
clint = "^0.5.1"
feedparser = "^5.2.1"
beautifulsoup4 = "^4.8.2"
semidbm = "^0.5.1"

[tool.poetry.dev-dependencies]
sphinx-click = "^2.3.1"
coverage = "^5.0.3"
sphinx-autobuild = "^0.7.1"
pxml = "^0.2.13"
green = "^3.1.2"
mypy = "^0.761"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
